@@ -1,3 +1,10 @@
+2016-11-20  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	Save the correct window geometry
+
+	* src/main-window.c (bw_size_allocate_cb): save the window
+	geometry from gtk_window_get_size instead of the GtkAllocation.
+
 2016-11-19  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	* libbalsa/misc.c: document libbalsa_font_string_to_css.
